--- a/client/src/styles/comments.css
+++ b/client/src/styles/comments.css
@@ -13,7 +13,7 @@
   border: none;
   outline: none;
   background: #f7f7f7;
-  color: blue;
+  color: seagreen;
   font-weight: 600;
 }
 .comment_input .dropdown-menu {
