--- a/client/src/styles/call_modal.css
+++ b/client/src/styles/call_modal.css
@@ -13,7 +13,7 @@
 .call_box{
     width: 100%;
     max-width: 400px;
-    background: darkblue;
+    background: #88b678;
     display: flex;
     align-items: center;
     justify-content: center;
